# Computer_Parts_System

./: CMakeLists.txt  README.md  main.cpp
include/: bus.hpp  cabinent.hpp  chasis.hpp  composite.hpp  composite_equipment.hpp  disk_drive.hpp  equipment.hpp  video_card.hpp
src/: bus.cpp  cabinent.cpp  chasis.cpp  composite_equipment.cpp  disk_drive.cpp  equipment.cpp  video_card.cpp
test/: CMakeLists.txt  computer_parts_test.cpp
